# SinkhornKnopp-triton

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: K.py  SinkhornKnoppNumpy.py  SinkhornKnoppTorch.py  SinkhornKnoppTriton.py  __init__.py
tests/: test.py
